--- a/client/src/Recs/Recs.css
+++ b/client/src/Recs/Recs.css
@@ -35,8 +35,10 @@
 
 .venue img {
   position: relative;
-  width: 100%;
-  height: 100%;
+  max-width: 200px;
+  max-height: 150px;
+  height: auto;
+  object-fit: contain;
 }
 
 .details {
