--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,8 +22,6 @@ a:hover {
   color: #535bf2;
 }
 
-
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -65,10 +63,16 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 h4 {
   margin: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
 }
